package mini.integration.customerservice.domain.enumtype;

public enum Gender {
    MALE,
    FEMALE
}
