package mini.integration.customerservice.domain.enumtype;

public enum MemberShipType {
    BRONZE,
    SILVER,
    GOLD,
    DIAMOND
}
