package mini.integration.customerservice.domain.enumtype;

public enum NotificationChannel {
    EMAIL,
    SMS,
    DEVICE
}
