package mini.integration.customerservice.domain.enumtype;

public enum NotificationStatus {
    ACTIVE,
    INACTIVE
}
